k8s_deployments/vaultwarden/vaultwarden-netpol.yml
# This Policy ensures that the pod can access only the resources it's meant to
# and is hit by traffic coming from the reverse proxy only
apiVersion: projectcalico.org/v3
kind: NetworkPolicy
metadata:
  name: vaultwarden
  namespace: default
spec:
  selector: app == 'vaultwarden'
  ingress:
  - source:  # Allowing connections from the reverse proxy
      selector: app.kubernetes.io/name == 'traefik'
      namespaceSelector: kubernetes.io/metadata.name == 'kube-system'
    destination:
      ports:
      - vaultwarden-ui
    protocol: TCP
    action: Allow
  egress:
  - destination:
      nets:
      - 1.2.3.4/32  # mysql db
      ports:
      - 3305
    protocol: TCP
    action: Allow
  - destination:
      nets:
      - 1.2.3.4/32  # smtp relay
      ports:
      - 587  # smtp with starttls
    protocol: TCP
    action: Allow
  - destination:
      nets:
      - 1:2:3::4/128  # smtp relay
      ports:
      - 587  # smtp with starttls
    protocol: TCP
    action: Allow
  - destination:  # Allowing connections to the dns resolver
      selector: k8s-app == 'kube-dns'
      namespaceSelector: kubernetes.io/metadata.name == 'kube-system'
      ports:
      - 53
    protocol: UDP
    action: Allow
  - destination:  # Allowing connections to the dns resolver
      selector: k8s-app == 'kube-dns'
      namespaceSelector: kubernetes.io/metadata.name == 'kube-system'
      ports:
      - 53
    protocol: TCP
    action: Allow
